rwf-bin/src/ui/dialog/snapshot_tests/snapshots/rwf__ui__dialog__snapshot_tests__sort_size_descending_120x40.snap
---
source: rwf-bin/src/ui/dialog/snapshot_tests/mod.rs
expression: "render_dialog_to_string(dialog, state, width, height)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 120, height: 40 },
    content: [
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                        ┌Sort──────────────────────────────────────────────────────────────────┐                        ",
        "                        │  Sort by:                                                            │                        ",
        "                        │  ○ Name                                                              │                        ",
        "                        │  ● Size                                                              │                        ",
        "                        │  ○ Date                                                              │                        ",
        "                        │  ○ Extension                                                         │                        ",
        "                        │                                                                      │                        ",
        "                        │  Order:                                                              │                        ",
        "                        │  ○ Ascending                                                         │                        ",
        "                        │  ● Descending                                                        │                        ",
        "                        │                                                                      │                        ",
        "                        │                           [*OK*]  [Cancel]                           │                        ",
        "                        └──────────────────────────────────────────────────────────────────────┘                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
        "                                                                                                                        ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: BOLD,
        x: 29, y: 13, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 14, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 14, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 15, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 15, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 16, fg: Black, bg: White, underline: Reset, modifier: NONE,
        x: 93, y: 16, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 16, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 17, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 17, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 18, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 18, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 19, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 19, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 20, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 20, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 21, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 21, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 27, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 93, y: 22, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 22, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 25, y: 23, fg: Reset, bg: Gray, underline: Reset, modifier: NONE,
        x: 95, y: 23, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 24, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 24, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 25, fg: Black, bg: Gray, underline: Reset, modifier: NONE,
        x: 96, y: 25, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
